# garamon-commonGAs

./: README.md
garamon_c2ga/: CMakeLists.txt  cheatSheet.txt
garamon_c2ga/src/c2ga/: Mvec.hpp  Outer.hpp  PythonBindings.cpp  Utility.hpp
garamon_c3ga/: CMakeLists.txt  cheatSheet.txt
garamon_c3ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
garamon_c3ga/src/c3ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
garamon_c4ga/: CMakeLists.txt  cheatSheet.txt
garamon_c4ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
garamon_c4ga/src/c4ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
garamon_e2ga/: CMakeLists.txt  cheatSheet.txt
garamon_e2ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
garamon_e2ga/src/e2ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
garamon_e3ga/: CMakeLists.txt  cheatSheet.txt
garamon_e3ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
garamon_e3ga/src/e3ga/: Constants.hpp  Mvec.hpp  Utility.hpp
garamon_e4ga/: CMakeLists.txt  cheatSheet.txt
garamon_e4ga/doc/: CMakeLists.txt  Doxyfile-html.cmake
garamon_e4ga/src/e4ga/: BasisTransformations.hpp  Constants.hpp  DualCoefficients.hpp  Geometric.hpp  GeometricExplicit.hpp  Inner.hpp  InnerExplicit.hpp  Mvec.cpp  Mvec.hpp  Outer.hpp  OuterExplicit.hpp  PythonBindings.cpp  Utility.hpp
